styles/main.css
/* ... */
.container-div,
.icon-blocks {
  display: flex;
  align-items: flex-start;
}
.icon-blocks {
  width: 624px;
  justify-content: center;
  gap: var(--item-spacing-12);
  max-width: var(--width-624);
  font-size: var(--font-size-16);
  margin-top: clamp(16px, 10vh, 160px); /* adaptatif selon hauteur viewport */
}
.container-div {
  align-self: stretch;
  flex-direction: column;
}
.component-1,
.transparent {
  position: relative;
  overflow: hidden;
}
.transparent {
  width: 200px;
  box-shadow: var(--shadow-inner);
  backdrop-filter: blur(7px);
  border-radius: var(--br-1000);
  background: var(--gradient-1);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: var(--padding-20) var(--padding-24);
  box-sizing: border-box;
  isolation: isolate;
  gap: var(--item-spacing-10);
}
.component-1 {
  width: var(--width-24);
  height: var(--height-24);
  flex-shrink: 0;
}
.divider-icon {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  max-width: 100%;
  overflow: hidden;
  max-height: 100%;
}
.logo {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 1;
  flex-shrink: 0;
}
.sf {
  position: relative;
  line-height: 21.8px;
  font-weight: var(--font-weight-500);
}
.after {
  width: 100%;
  height: 100%;
  position: absolute;
  margin: 0 !important;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: var(--br-1000);
  border: var(--border-1);
  box-sizing: border-box;
  z-index: 2;
  flex-shrink: 0;
}
.blocks-container,
.info-blocks,
.left {
  align-self: stretch;
  display: flex;
  align-items: flex-start;
}
.info-blocks {
  flex-wrap: wrap;
  align-content: flex-start;
  gap: var(--item-spacing-s);
  font-size: var(--item-spacing-12);
  font-family: var(--font-family-Font-2);
}
.blocks-container,
.left {
  flex-direction: column;
}
.blocks-container {
  flex: 1;
  min-width: 286px;
  max-width: 382px;
  text-align: left;
}
.left {
  gap: var(--item-spacing-5);
}
.property-type {
  align-self: stretch;
  position: relative;
  letter-spacing: var(--letter-spacing-0-48);
  line-height: var(--lh-16_3);
  text-transform: uppercase;
  font-weight: var(--font-weight-500);
}
.pframer-text4 {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-size: var(--font-size-40);
  font-family: var(--font-family-Font-1);
}
.cottage {
  margin: 0;
  align-self: stretch;
  position: relative;
  font-size: inherit;
  letter-spacing: var(--letter-spacing-0-8);
  line-height: var(--line-height-38-4);
  text-transform: uppercase;
  font-weight: var(--font-weight-400);
  font-family: inherit;
}
.blocks-container2,
.center {
  align-self: stretch;
  display: flex;
  flex-direction: column;
}
.blocks-container2 {
  flex: 1;
  align-items: flex-start;
  min-width: 286px;
  max-width: 382px;
}
.center {
  align-items: center;
  gap: var(--item-spacing-5);
}
.lot-size {
  position: relative;
  letter-spacing: var(--letter-spacing-0-48);
  line-height: var(--lh-16_3);
  text-transform: uppercase;
  font-weight: var(--font-weight-500);
}
.pframer-text6 {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: var(--font-size-40);
  font-family: var(--font-family-Font-1);
}
.acres {
  position: relative;
  letter-spacing: var(--letter-spacing-0-8);
  line-height: var(--line-height-38-4);
  text-transform: uppercase;
}
.blocks-container4 {
  align-self: stretch;
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  min-width: 286px;
  max-width: 382px;
  text-align: right;
}
.right {
  gap: var(--item-spacing-5);
}
.pframer-text10,
.pframer-text9,
.right {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}
.pframer-text10 {
  font-size: var(--font-size-40);
  font-family: var(--font-family-Font-1);
}
.for-sale {
  margin: 0;
  position: relative;
  font-size: inherit;
  letter-spacing: var(--letter-spacing-0-8);
  line-height: var(--line-height-38-4);
  text-transform: uppercase;
  font-weight: var(--font-weight-400);
  font-family: inherit;
}
.overview {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: var(--padding-200) var(--padding-20);
  box-sizing: border-box;
  max-width: 100%;
  text-align: left;
  font-size: var(--item-spacing-12);
  color: var(--token-aad5bacc-2559-49b4-96c8-5df0a8e901ea);
  font-family: var(--font-family-Font-2);
}
.container-overview-content {
  width: var(--width-1600);
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: var(--item-spacing-s);
  max-width: 100%;
}
.overview-info {
  flex: 1.0648;
  overflow: hidden;
  gap: var(--item-spacing-l);
  min-width: 512px;
  max-width: 100%;
}
.h2framer-text,
.label-heading,
.overview-info {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.label-heading {
  align-self: stretch;
  gap: 15.2px;
}
.h2framer-text {
  width: 640px;
  font-size: var(--item-spacing-l);
  color: var(--token-a3ff9db6-6cfa-4ae6-a752-cfe8e7c629fe);
  font-family: var(--font-family-Font-1);
}
.cozy-cottage-in {
  margin: 0;
  position: relative;
  font-size: inherit;
  letter-spacing: var(--letter-spacing-0-481);
  line-height: var(--lh-51_8);
  text-transform: uppercase;
  font-weight: var(--font-weight-400);
  font-family: inherit;
}
.div-container-parent,
.icon-blocks2 {
  display: flex;
  align-items: flex-start;
  max-width: 100%;
}
.icon-blocks2 {
  align-self: stretch;
  height: 298.1px;
  flex-direction: column;
  padding: var(--padding-0) var(--padding-0) 1.1px;
  box-sizing: border-box;
  gap: 1px;
  text-align: center;
  font-size: var(--font-size-14);
  color: var(--token-a3ff9db6-6cfa-4ae6-a752-cfe8e7c629fe);
  font-family: var(--font-family-Font-1);
}
.div-container-parent {
  row-gap: var(--gap-20);
}
/* ... */

